Updated by task 'AUTO_TM_MT_1762987257375' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/bffeada2068d23bedc117d631c1ed1eff2662c67

--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -4,7 +4,7 @@ description: Notas de la versión de Analytics de 2023
 feature: Release Notes
 mini-toc-levels: 2
 exl-id: c0d91643-2f2a-4877-b421-cfd42259d4a4
-source-git-commit: 665319bdfc4c1599292c2e7aea45622d77a291a7
+source-git-commit: ca84a5f807545d7196e2e0e90d3209c32d3fd789
 workflow-type: tm+mt
 source-wordcount: '11554'
 ht-degree: 100%
@@ -13,7 +13,7 @@ ht-degree: 100%
 
 # Notas de la versión de Adobe Analytics de 2023
 
-Obtenga información sobre las últimas actualizaciones de la versión para los [productos de Adobe Experience Cloud](https://business.adobe.com/es/products/adobe-experience-cloud-products.html?lang=es). Obtenga la documentación de autoayuda más reciente: tutoriales y cursos sobre Experience League.
+Obtenga información sobre las últimas actualizaciones de la versión para los [productos de Adobe Experience Cloud](https://business.adobe.com/es/products/adobe-experience-cloud-products.html). Obtenga la documentación de autoayuda más reciente: tutoriales y cursos sobre Experience League.
 
 ## Diciembre de 2023
 
