--- a/help/release-notes/2021.md
+++ b/help/release-notes/2021.md
@@ -3,7 +3,7 @@ title: Ver las notas de la versión de Adobe Analytics de 2021
 description: Notas de la versión de Analytics de 2021
 feature: Release Notes
 exl-id: 485dd910-84d3-4084-9135-8af5869401fa
-source-git-commit: fcc165536d77284e002cb2ba6b7856be1fdb3e14
+source-git-commit: ca84a5f807545d7196e2e0e90d3209c32d3fd789
 workflow-type: tm+mt
 source-wordcount: '8610'
 ht-degree: 100%
@@ -87,7 +87,7 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.
 
 | Función | Descripción | [Disponibilidad general](/help/release-notes/releases.md) - Fecha de destino |
 | ----------- | ---------- | ------- |
-| No hay nuevas funciones este mes | N/A |
+| No hay nuevas funciones este mes | N/A |  |
 
 {style="table-layout:auto"}
 
@@ -121,7 +121,7 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.
 
 | Función | Descripción | [Disponibilidad general](releases.md) - Fecha de destino |
 | ----------- | ---------- | ------- |
-| No hay nuevas funciones este mes | N/A |
+| No hay nuevas funciones este mes | N/A |  |
 
 {style="table-layout:auto"}
 
@@ -186,7 +186,7 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement, co
 
 | Función | [Disponibilidad general](releases.md) - Fecha de destino | Descripción |
 | ----------- | ---------- | ------- |
-| No hay nuevas funciones este mes | N/A |
+| No hay nuevas funciones este mes | N/A |  |
 
 {style="table-layout:auto"}
 
@@ -421,7 +421,7 @@ AN-204659; AN-221726; AN-230949; AN-231984; AN-232835; AN-233989; AN-235593; AN-
 | Fin de la vida útil de tres servicios de API de Analytics | 6 de enero de 2021 | El 30 de abril de 2021, los siguientes servicios de la API heredada de Analytics tienen programado alcanzar la fecha de fin de vida útil y se cerrarán. Todas las integraciones actuales creadas con estos servicios dejarán de funcionar ese día.<ul><li>API de Analytics 1.3</li><li>API de Analytics SOAP 1.4</li><li>Autenticación OAuth heredada (OAuth y JWT)</li></ul>Adobe pone a su disposición [Preguntas frecuentes del fin de la vida útil de la API heredada](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/APIEOL.md?mv=email) para responder a sus preguntas y proporcionar instrucciones sobre cómo proceder. Las integraciones de API que emplean estos servicios pueden migrar a las [API de REST 1.4 de Analytics](https://github.com/AdobeDocs/analytics-1.4-apis?mv=email) o a las [API de Analytics 2.0](https://github.com/AdobeDocs/analytics-2.0-apis?mv=email). Las cuentas OAuth heredadas pueden migrar a una cuenta de integración de [Adobe Developer](https://console.adobe.io/home?mv=email#) Analytics, que puede utilizarse para acceder tanto a las API de Analytics 1.4 como a las API de Analytics 2.0. |
 | Añadir el encabezado HSTS a todas las solicitudes de HTTPS entrantes | 29 de septiembre de 2020 | El 29 de septiembre de 2020, empezamos a agregar el encabezado HSTS a todas las solicitudes entrantes que utilicen HTTPS. Esto indica al navegador/cliente que realice todas las solicitudes futuras en HTTPS, lo que se considera una práctica recomendada de seguridad. En este punto, no se aplicará esto a las solicitudes entrantes que utilicen HTTP. |
 | Cambio en la configuración de cookies del [!UICONTROL servicio de Experience Cloud ID] | 22 de septiembre de 2020 | Una actualización de la configuración de privacidad de la versión 80 de Chrome afectó la capacidad de Adobe Analytics para rastrear a algunos usuarios que ven páginas AMP de Google. Específicamente, evita el seguimiento entre dominios de los usuarios que ven páginas AMP alojadas en Google. Esto podría causar un aumento en la cantidad de visitantes únicos. Esta corrección permite a los usuarios solucionar este problema cambiando la configuración de sus cookies de ECID.<br>Actualmente, Analytics establece cookies ECID del [!UICONTROL servicio de Experience Cloud ID] con la configuración `SameSite = Lax` que, antes de la versión 80 de Chrome, permitía el seguimiento entre dominios. Ya no es así. Este cambio permite a los usuarios actualizar la configuración SameSite para las cookies ECID a `None`.<br>Este cambio permite que la cookie de Analytics se comparta en más situaciones, pero las cookies de Analytics no contienen información confidencial. Además, al elegir esta configuración, las cookies deben configurarse en `Secure` para que los datos solo puedan pasarse a través de conexiones HTTPS. Si desea hacer este cambio, pida a un usuario de asistencia técnica que abra un ticket con el Servicio de atención al cliente. |
-| Migración de `omniture.com` a dominio `adobe.com` | 21 de agosto de 2020 | El 13 de agosto de 2020, Adobe Analytics migró su arquitectura de front-end de `omniture.com|http://omniture.com/` al dominio `adobe.com|http://adobe.com/`. Este cambio debería mitigar los problemas de cookies de terceros que surgieron tras el cambio inicial del dominio unificado del producto del 28 de mayo de 2020. Como resultado de esta actualización, el explorador pide a los usuarios que confíen en un nuevo `.adobe.com|http://an.adobe.com/` o dominio de `experience.adobe.com|http://experience.adobe.com/`. |
+| Migración de `omniture.com` a dominio `adobe.com` | 21 de agosto de 2020 | El 13 de agosto de 2020, Adobe Analytics migró su arquitectura de front-end de `omniture.com\|http://omniture.com/` al dominio `adobe.com\|http://adobe.com/`. Este cambio debería mitigar los problemas de cookies de terceros que surgieron tras el cambio inicial del dominio unificado del producto del 28 de mayo de 2020. Como resultado de esta actualización, el explorador pide a los usuarios que confíen en un nuevo `.adobe.com\|http://an.adobe.com/` o dominio de `experience.adobe.com\|http://experience.adobe.com/`. |
 | Actualización de la compatibilidad con Ad Hoc Analysis Java™ 8 | 21 de agosto de 2020 | Actualmente, Ad Hoc Analysis no es compatible con Java™ 8 versiones 1.8.0_261 o posterior. Para garantizar que el acceso a esta herramienta no se interrumpa antes de la [fecha de fin de vida útil](https://spark.adobe.com/page/S9Bhp66VJ2fEn/), Adobe recomienda que mantenga una versión de Java™ 8 anterior a la 1.8.0_261. |
 | Fin de la vida útil de Data Connectors de Adobe | 13 de julio de 2020 | Los [!UICONTROL Data Connectors de Adobe] utilizan tecnología antigua que ya no es útil ni compatible. Adobe tiene un nuevo estándar en el [Programa de socios de Adobe Exchange](https://partners.adobe.com/exchangeprogram/experiencecloud), que debe adoptarse en todas las integraciones para poder ofrecerlas y que sean compatibles. La fecha oficial de finalización de la vida útil todavía está por determinar, pero Adobe prevé que sea en los próximos 12-18 meses (entre mediados de 2021 y finales de 2021). [Más información...](https://experienceleague.adobe.com/es/docs/discontinued/using/data-connectors) |
 | Fin de la vida útil de Ad Hoc Analysis | 6 de agosto de 2018 | Adobe anunció su intención de finalizar el servicio de Ad Hoc Analysis el 1 de marzo de 2021. Para obtener más información, consulte [Discover Espacio de trabajo](https://spark.adobe.com/page/S9Bhp66VJ2fEn/). |
